test/classes/initializers/phase1/hasBeginOnFieldInit.good
hasBeginOnFieldInit.chpl:4: In initializer:
hasBeginOnFieldInit.chpl:7: error: can't initialize field "x" inside a parallel statement during phase 1 of initialization
